[tool.poetry]
name = "pytreefind"
version = "0.1.0"
description = "A CLI tool to list Python backend files, ignoring caches, envs, and system files"
authors = ["Preston Osoro <prestonosoro56@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["cli", "tree", "python", "backend", "file-structure"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.scripts]
pytreefind = "pytreefind.tree:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
